Before catagory change
